try to use jextract